--- a/src/scss/ui/eventos/_eventos.scss
+++ b/src/scss/ui/eventos/_eventos.scss
@@ -18,10 +18,12 @@
 
 }
 .evento {
+    border: 1px solid v.$grisClaro;
     &__contenido {
         padding: 2rem;
-        border: 1px solid lighten(v.$gris, 68%);
-        border-top: none;
+    }
+    &__img {
+        width: 100%;
     }
     &__fecha {
         font-size: 1.4rem;
@@ -37,13 +39,9 @@
         align-items: center;
     }
     &__autor-imagen {
-        img {
-            border-radius: 100%;
-            width: 9rem;
-            @include m.tablet {
-                width: 10rem;
-            }
-        }
+        border-radius: 100%;
+        width: 10rem;
+        overflow: hidden;
     }
     &__organizado-texto {
         font-weight: 700;
