--- a/src/scss/ui/footer/_footer.scss
+++ b/src/scss/ui/footer/_footer.scss
@@ -3,12 +3,10 @@
 
 .footer {
     text-align: center;
-    padding-bottom: 2.5rem;
+    padding: 6rem 0 3rem 0;
     .footer__texto {
         margin: 0;
+        padding-top: 3rem;
         font-size: 1.4rem;
-        @include m.desktop {
-            font-size: 1.6rem;
-        }
     }
 }
