--- a/src/scss/ui/grupos/_grupos.scss
+++ b/src/scss/ui/grupos/_grupos.scss
@@ -2,18 +2,16 @@
 @use 'bases/mixins' as m;
 
 .grupos {
-    color: v.$blanco;
-    position: relative;
-   
-    background-image: linear-gradient(to bottom, v.$primario 0%, v.$primario 50%, v.$secundario 50%, v.$secundario 100%);
+    // 50% 50% === 0%, 50%, 50% 100%
+    background-image: linear-gradient(to bottom, v.$primario 50%, v.$secundario 50%);
     @include m.tablet {
-        background-image: linear-gradient(to right, v.$primario 0%, v.$primario 50%, v.$secundario 50%, v.$secundario 100%);
+        background-image: linear-gradient(to right, v.$primario 50%, v.$secundario 50%);
     }
     .grupos__contenido {
+        color: v.$blanco;   
         @include m.tablet {
             @include m.grid(2, 5rem);
         }
-
     }
 
     .grupos__grupo {
@@ -21,7 +19,6 @@
         padding-block: 8rem;
         flex-direction: column;
         justify-content: center;
-
     }
     .grupos__heading {
         margin: 0 0 2rem 0;
@@ -29,7 +26,7 @@
     .grupos__texto {
         color: inherit;
         margin: 0;
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
 
 }
