--- a/src/scss/ui/navegacion/_navegacion.scss
+++ b/src/scss/ui/navegacion/_navegacion.scss
@@ -17,14 +17,13 @@
     }
     &__enlace {
         font-size: 1.4rem;
-        // padding: 0 1rem;
         &--grupo {
             color: v.$primario;
             font-weight: 700;
             @include m.tablet {
                 &::after {
                     content: '';
-                    border-right: 2px solid lighten(v.$negro, 90%);
+                    border-right: 2px solid v.$grisClaro;
                     padding: 1rem;
                 }
             }
